# eyebeam

./: .gitignore  Cargo.toml  README.md  log.txt
src/: main.rs
src/structs/: animate.rs  appearance.rs  camera.rs  color.rs  finish.rs  light.rs  mesh.rs  mod.rs  plane.rs  prism.rs  ray.rs  scene.rs  shape.rs  sphere.rs  util.rs  vec3.rs
