[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
gif = "0.12.0"
image = "0.24.7"
ndarray = "0.15.6"
video-rs = { version = "0.5.0", features = ["ndarray"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tobj = "4.0.0"
raster = "0.2.0"
